<resources>
    <string name="app_name">Gizilo</string>
    <string name="title_splash_screen">Pantau Nutrisi Produk Kemasan Dengan Sekali Scan</string>
    <string name="btn_register">Register</string>
    <string name="confrim_password">Confirm your password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_fullname">Enter your fullname</string>
    <string name="signup_desc">Discover a healthier you with GIZILO</string>
    <string name="title_signup">Welcome OnBoard</string>
    <string name="signup_account">Already have an acount?</string>
    <string name="signin">Sign in</string>
    <string name="login_title">Welcome</string>
    <string name="forget_password">Forget Password?</string>
    <string name="btn_login">Login</string>
    <string name="login_question">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="quote_expert">“Mereka yang berpikir bahwa mereka tidak punya waktu untuk makan sehat, cepat atau lambat harus menyiapkan diri untuk sakit.” – Edward Stanley</string>
    <string name="desc_about_us">Aplikasi ini dibuat untuk memantau nutrisi yang kita masukkan ke dalam tubuh agar tetap terkontrol dengan baik. Membantu Anda memilih makanan yang sehat dan bergizi. Aplikasi ini dapat membantu Anda menemukan makanan yang sesuai dengan kebutuhan dan preferensi Anda. Membantu Anda mencapai tujuan kesehatan Anda.</string>
    <string name="your_web_client_id">985866910945-pbt164dp0fk3agg7cn5pstmh553kb3ek.apps.googleusercontent.com</string>
    <string name="have_login">Selamat Anda Telah Login</string>
    <string name="selamat_datang_di_gizilo">Selamat Datang di Gizilo</string>
    <string name="pantau_asupan_harian_nutrisi_dirilo">pantau asupan harian nutrisi dirilo!!!</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="home_fragment">Yuk Mulai Hidup Sehat</string>
    <string name="simpan">Simpan</string>
    <string name="nutrisi">Nutrisi</string>
    <string name="nama_produk">nama produk</string>
    <string name="berat_total">Berat total</string>
    <string name="gallery">gallery</string>
    <string name="camera_x">camerax</string>
    <string name="upload">Analisis</string>
    <string name="potassium">Potassium</string>
    <string name="calories_total">Calories total</string>
    <string name="lemak_total">Lemak total</string>
    <string name="protein">Protein</string>
    <string name="karbohidrat">Karbohidrat</string>
    <string name="gula">Gula</string>
    <string name="sodium">Sodium</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="result">Hasil analisis</string>
    <string name="result_a">Produk ini sehat untuk dikonsumsi karena di bawah 10% dari daily intake</string>
    <string name="result_b">Produk ini cukup sehat untuk dikonsumsi karena di range 10-25% dari daily intake</string>
    <string name="result_c">Produk ini kurang sehat untuk dikonsumsi karena di range 25-50% dari daily intake</string>
    <string name="result_d">Produk ini tidak sehat untuk dikonsumsi karena di atas 50%  dari daily intake</string>

</resources>