<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.registration.RegisterActivity"
    android:orientation="vertical"
    android:background="@color/background">


    <TextView
        android:id="@+id/welcome_title"
        style="@style/TextView.PoppinsSemiBold24spwhite"
        android:layout_width="251dp"
        android:layout_height="31dp"
        android:text="@string/title_signup"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/register_desc"
        style="@style/TextView.PoppinsRegular18spwhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_title"
        app:layout_constraintVertical_bias="0.055"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editText2"
        style="@style/EdiText.PoppinsRegular18spGrey"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/shape_rectangle_outline"
        android:hint="@string/enter_your_fullname"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_desc"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/editText3"
        style="@style/EdiText.PoppinsRegular18spGrey"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_rectangle_outline"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="Autofill,MissingConstraints" />

    <EditText
        android:id="@+id/editText4"
        style="@style/EdiText.PoppinsRegular18spGrey"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_rectangle_outline"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:ignore="Autofill,MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/editText5"
        style="@style/EdiText.PoppinsRegular18spGrey"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_rectangle_outline"
        android:hint="@string/confrim_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText4"
        tools:ignore="Autofill,MissingConstraints,TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button"
        style="@style/Button.PoppinsSemiBold20spDark"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:background="@drawable/shape_rectangle_big"
        android:backgroundTint="@color/white"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        app:layout_constraintVertical_bias="0.307"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        style="@style/TextView.PoppinsBold18spwhite"
        android:layout_width="240dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/signup_account"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextView.PoppinsBold18spBlue"
        android:layout_width="88dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:text="@string/signin"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="MissingConstraints,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>