<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.welcome.WelcomeActivity"
    android:background="@color/background">


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="291dp"
        android:layout_height="295dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person_healthy"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title_welcome"
        style="@style/TextView.PoppinsSemiBold24spwhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/selamat_datang_di_gizilo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/desc_welcome"
        style="@style/TextView.PoppinsRegular18spwhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/pantau_asupan_harian_nutrisi_dirilo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_welcome" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        style="@style/Button.PoppinsSemiBold20spDark"
        android:background="@drawable/shape_rectangle_big"
        android:text="@string/masuk"
        app:layout_constraintEnd_toStartOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_welcome" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="28dp"
        style="@style/Button.PoppinsSemiBold20spDark"
        android:background="@drawable/shape_rectangle_big"
        android:text="@string/daftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_welcome" />
</androidx.constraintlayout.widget.ConstraintLayout>